--- a/src/components/BolaElementoLista/index.css
+++ b/src/components/BolaElementoLista/index.css
@@ -1,7 +1,7 @@
-.BolaSorteada{
+.BolaElementoLista{
     background-color: yellow;
-    height: 100px;
-    width: 100px;
+    height: 50px;
+    width: 50px;
     border-radius: 50%;
     display: flex;
     align-items: center;
